# pyobs-qhyccd

./: .readthedocs.yml  CMakeLists.txt  README.md  pyproject.toml  setup.py
.github/workflows/: pypi.yml  ruff.yml
docs/: Makefile
docs/source/: conf.py  index.rst
lib/sbin/: fxload
lib/usr/local/include/: config.h  qhyccd.h  qhyccdcamdef.h
lib/usr/local/lib/: libqhyccd.so.20  libqhyccd.so.6
lib/usr/local/testapp/LiveFrameMode/: LiveFrameSample.cpp
lib/usr/local/testapp/cmake_demo/test_cfw/: main.cpp
lib/usr/local/testapp/cmake_demo/test_indi_client/: main.cpp  main.h
lib/usr/local/testapp/cmake_demo/test_indi_focus/: CMakeLists.txt  main.cpp  main.h
lib/usr/local/testapp/cmake_demo/test_live_multicam_opencv/: CMakeLists.txt  FindLibQHYCCD.cmake  README.md  main.cpp
lib/usr/local/testapp/cmake_demo/test_live_multicam_opencv/include/: CyAPI.h  config.h  dllqhyccd.cpp  dllqhyccd.h  qhyccd.h  qhyccdcamdef.h  qhyccdstruct.h
lib/usr/local/testapp/cmake_demo/test_live_multicam_opencv/lib/: qhyccd.lib
pyobs_qhyccd/: __init__.py  gui.py  libqhyccd.pxd  qhyccdcamera.py  qhyccddriver.cpp  qhyccddriver.pyx
